# cb-crawler

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
crawler/: __init__.py  config.py  db.py  main.py
crawler/crawler/: base.py  cashback.py
crawler/env/: dev.yaml  prod.yaml  stg.yaml
crawler/site_configs/: 2.yaml  80.yaml  example.yaml
crawler/utils/: helpers.py  logger.py  site_config.py
